<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addBeaconLayout"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="Autofill">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/beaconRegionTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/beaconRegionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/beaconNameHint"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkboxUUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/defaultUUID"
            android:clickable="true"
            android:focusable="true"/>
        <CheckBox
            android:id="@+id/checkboxSetDefaultUUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/checkboxUUID"
            android:text="@string/setDefaultUUID"
            android:clickable="true"
            android:focusable="true"/>
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/UUIDTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="32">
        <EditText
            android:id="@+id/UUIDEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UUIDHint"
            android:inputType="textCapCharacters"
            android:digits="0123456789QWERTYUIOPASDFGHJKLZXCVBNM"
            android:maxLength="32"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/MajorTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="5">
        <EditText
            android:id="@+id/MajorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/MajorNumberHint"
            android:inputType="number"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/MinorTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="5">
        <EditText
            android:id="@+id/MinorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/MinorNumberHint"
            android:inputType="number"
            android:maxLength="5"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>