<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    android:id="@+id/activityMain"
    tools:ignore="ContentDescription"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="64dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/PPLogo"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:padding="16dp"
                android:layout_margin="10dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/pp_logo"/>
            <ImageView
                android:id="@+id/LogoText"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/PPLogo"
                android:layout_toStartOf="@id/MineLogo"
                android:src="@drawable/logo_tekst_vol_2"/>
            <ImageView
                android:id="@+id/MineLogo"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:padding="16dp"
                android:layout_margin="10dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/remindeerlogo_vol_8"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <TextView
            android:id="@+id/HeadText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/scheduled"
            android:textColor="#272759"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="20"
        android:padding="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <fragment
            android:id="@+id/reminder_list_fragment"
            android:name="com.example.fixap.ReminderListFragment"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:layout="@layout/reminder_list_layout">
       </fragment>

        <LinearLayout
            android:id="@+id/NoRemindersLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/noReminders"
                    android:textColor="#272759"
                    android:textAlignment="center"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/crying_emoji"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/dontYou"
                    android:textColor="#272759"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:padding="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/DeleteImageButton"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="10dp"
                android:src="@drawable/trash"
                android:onClick="DeleteImageButton"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="16dp">
            <Button
                android:id="@+id/Add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/add_button"
                android:textColor="#272759"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:onClick="AddButton"
                android:background="@drawable/button_design_vol_2"/>
            <Button
                android:id="@+id/Delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:text="@string/delete_button"
                android:textColor="#272759"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="center"
                android:onClick="DeleteButton"
                android:background="@drawable/button_design_vol_2"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

