<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    tools:context=".AddReminder"
    tools:ignore="ContentDescription">
    <android.support.v7.widget.CardView
        android:id="@+id/ReminderImageAndText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/reminderImageLarge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="24dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="makeReminderPhoto"/>

            <TextView
                android:id="@+id/reminderTextViewLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="128dp"
                android:layout_toEndOf="@+id/reminderImageLarge"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="#272759"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:layout_toEndOf="@+id/reminderImageLarge"
                android:padding="0dp">
                <EditText
                    android:id="@+id/reminderEditTextViewLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:hint="@string/nameHint"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="#272759"
                    android:inputType="textCapCharacters"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/Type"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Switch
                android:id="@+id/typeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="32dp"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                />
            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#272759"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/DateFromCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="SetDate">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_design_vol_2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/FromDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/rememberDateFrom"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#272759"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/FromDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/chooseDateAndTime"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="#272759"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/DateToCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="SetDate">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_design_vol_2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/ToDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/rememberDateTo"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#272759"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/ToDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/chooseDateAndTime"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="#272759"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/LocalizationCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:onClick="GetAddingLocation"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/button_design_vol_2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/LocalizationTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:text="@string/localization"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#272759"/>

            <TextView
                android:id="@+id/Localization"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:hint="@string/clickToGetLocalization"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="#272759"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/LocationProgressBar"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="12dp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/BeaconCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:onClick="ChooseReminderBeacon"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/button_design_vol_2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/BeaconTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:text="@string/beacon"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#272759"/>

            <TextView
                android:id="@+id/Beacon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:hint="@string/clickToChooseBeacon"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="#272759"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/AddButtonCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/AddReminderImageButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="32dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/add"
                android:onClick="CreateReminder"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>